@@ -1,10 +1,10 @@
 package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.address.logic.Messages.MESSAGE_PERSONS_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
+import static seedu.address.testutil.TypicalAppointments.getTypicalAppointmentBook;
 import static seedu.address.testutil.TypicalPersons.CARL;
 import static seedu.address.testutil.TypicalPersons.ELLE;
 import static seedu.address.testutil.TypicalPersons.FIONA;
@@ -12,53 +12,68 @@ import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
+import seedu.address.model.appointment.AppointmentPersonContainsNamePredicate;
 import seedu.address.model.person.NameContainsKeywordsPredicate;
 
 /**
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
-    private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model model = new ModelManager(
+        getTypicalAddressBook(),
+        getTypicalAppointmentBook(),
+        new UserPrefs());
+    private final Model expectedModel = new ModelManager(
+        getTypicalAddressBook(),
+        getTypicalAppointmentBook(),
+        new UserPrefs());
 
     @Test
     public void equals() {
-        NameContainsKeywordsPredicate firstPredicate =
+        NameContainsKeywordsPredicate firstPersonPredicate =
                 new NameContainsKeywordsPredicate(Collections.singletonList("first"));
-        NameContainsKeywordsPredicate secondPredicate =
+        NameContainsKeywordsPredicate secondPersonPredicate =
                 new NameContainsKeywordsPredicate(Collections.singletonList("second"));
 
-        FindCommand findFirstCommand = new FindCommand(firstPredicate);
-        FindCommand findSecondCommand = new FindCommand(secondPredicate);
+        AppointmentPersonContainsNamePredicate firstApptPredicate =
+                new AppointmentPersonContainsNamePredicate(Collections.singletonList("2024-10-20"));
+        AppointmentPersonContainsNamePredicate secondApptPredicate =
+                new AppointmentPersonContainsNamePredicate(Collections.singletonList("2024-10-21"));
 
-        // same object -> returns true
-        assertTrue(findFirstCommand.equals(findFirstCommand));
+        FindCommand findFirstPersonCommand = new FindPersonCommand(firstPersonPredicate);
+        FindCommand findSecondPersonCommand = new FindPersonCommand(secondPersonPredicate);
+        FindCommand findFirstApptCommand = new FindAppointmentCommand(firstApptPredicate);
+        FindCommand findSecondApptCommand = new FindAppointmentCommand(secondApptPredicate);
 
-        // same values -> returns true
-        FindCommand findFirstCommandCopy = new FindCommand(firstPredicate);
-        assertTrue(findFirstCommand.equals(findFirstCommandCopy));
+        assertEquals(findFirstPersonCommand, findFirstPersonCommand);
+        assertEquals(findFirstApptCommand, findFirstApptCommand);
 
-        // different types -> returns false
-        assertFalse(findFirstCommand.equals(1));
+        FindCommand findFirstPersonCommandCopy = new FindPersonCommand(firstPersonPredicate);
+        FindCommand findFirstApptCommandCopy = new FindAppointmentCommand(firstApptPredicate);
+        assertEquals(findFirstPersonCommand, findFirstPersonCommandCopy);
+        assertEquals(findFirstApptCommand, findFirstApptCommandCopy);
 
-        // null -> returns false
-        assertFalse(findFirstCommand.equals(null));
+        assertNotEquals(findFirstPersonCommand, findFirstApptCommand);
 
-        // different person -> returns false
-        assertFalse(findFirstCommand.equals(findSecondCommand));
+        assertNotEquals(null, findFirstPersonCommand);
+        assertNotEquals(null, findFirstApptCommand);
+
+        assertNotEquals(findFirstPersonCommand, findSecondPersonCommand);
+        assertNotEquals(findFirstApptCommand, findSecondApptCommand);
     }
 
     @Test
     public void execute_zeroKeywords_noPersonFound() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
         NameContainsKeywordsPredicate predicate = preparePredicate(" ");
-        FindCommand command = new FindCommand(predicate);
+        FindCommand command = new FindPersonCommand(predicate);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Collections.emptyList(), model.getFilteredPersonList());
@@ -68,17 +83,18 @@ public class FindCommandTest {
     public void execute_multipleKeywords_multiplePersonsFound() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3);
         NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
-        FindCommand command = new FindCommand(predicate);
+        FindCommand command = new FindPersonCommand(predicate);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredPersonList());
+        assertEquals(Arrays.asList(CARL, ELLE, FIONA),
+            model.getFilteredPersonList().stream().map(p -> p.getPersonDescriptor()).toList());
     }
 
     @Test
     public void toStringMethod() {
-        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(Arrays.asList("keyword"));
-        FindCommand findCommand = new FindCommand(predicate);
-        String expected = FindCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
+        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(List.of("keyword"));
+        FindPersonCommand findCommand = new FindPersonCommand(predicate);
+        String expected = FindPersonCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
         assertEquals(expected, findCommand.toString());
     }
 
